--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
+    "react-day-picker": "^9.4.0",
     "react-dom": "^18.3.1",
     "sass": "^1.81.0",
     "vanilla-calendar-pro": "^3.0.0"
