--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "firebase": "^11.0.2",
     "i18next": "^24.0.2",
     "react": "^18.3.1",
     "react-day-picker": "^9.4.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.2",
+    "react-router-dom": "^7.0.1",
     "sass": "^1.81.0"
   },
   "devDependencies": {
