--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 VITE_API_KEY="AIzaSyCphUaY_H-M0rJl8eaix6bkWHCyUXd7eNY"
-VITE_AUTH_DOMAIN=
-VITE_PROJECT_ID=
-VITE_STORAGE_BUCKET=
-VITE_MESSAGING_SENDER_ID=
-VITE_APP_ID=
+VITE_AUTH_DOMAIN='vacation-calendar-af2cd.firebaseapp.com'
+VITE_PROJECT_ID='vacation-calendar-af2cd'
+VITE_STORAGE_BUCKET='vacation-calendar-af2cd.firebasestorage.app'
+VITE_MESSAGING_SENDER_ID='815296214562'
+VITE_APP_ID='1:815296214562:web:038b8256c0e8b49d557c7b'
+VITE_MEASUREMENT_ID='G-9WJC9B6Q7G'
