--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^9.4.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.1.2",
     "react-router-dom": "^7.0.1",
     "sass": "^1.81.0"
