--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.1.2",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.0.1",
     "sass": "^1.81.0"
   },
