--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "firebase": "^11.0.2",
+    "firebase": "^11.9.1",
     "i18next": "^24.0.2",
     "react": "^18.3.1",
     "react-day-picker": "^9.4.0",
@@ -21,8 +21,7 @@
     "react-i18next": "^15.1.2",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.0.1",
-    "sass": "^1.81.0",
-    "vite-plugin-mkcert": "^1.17.8"
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
